test/libsolidity/syntaxTests/nameAndTypeResolution/266_invalid_args_creating_memory_array.sol
contract C {
    function f(uint size) public {
        uint[] memory x = new uint[]();
    }
}
// ----
// TypeError: (74-86): Wrong argument count for function call: 0 arguments given but expected 1.
